--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+<img style="max-height:500px; display:block;margin: 0 auto" src ="../images/wall.jpg">
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+# Lộ trình
+<div class="wrap">
+    <a class="card" href="http://127.0.0.1:4000/vl2/co-ban">VL2 cơ bản</a>
+    <a class="card" href="http://127.0.0.1:4000/vl2/co-ban">VL2 nâng cao</a>
+    <a class="card" href="http://127.0.0.1:4000/vl2/co-ban">VL3 cơ bản</a>
+    <a class="card" href="http://127.0.0.1:4000/vl2/co-ban">VL3 nâng cao</a>
+</div>
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
 
-You can edit the `index.html` file to change this content.
-
-# Posts
