fix merge error 1

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@ search_exclude: true
 image: images/logo.png
 ---
 
-<img style="max-height:500px; display:block;margin: 0 auto" src ="../images/wall.jpg">
+<img style="max-height:500px; display:block;margin: 0 auto" src ="https://i.imgur.com/dMgWndU.jpg">
 
 # Lộ trình
 <div class="wrap">
-    <a class="card" href="http://127.0.0.1:4000/vl2/co-ban">VL2 cơ bản</a>
-    <a class="card" href="http://127.0.0.1:4000/vl2/co-ban">VL2 nâng cao</a>
-    <a class="card" href="http://127.0.0.1:4000/vl2/co-ban">VL3 cơ bản</a>
-    <a class="card" href="http://127.0.0.1:4000/vl2/co-ban">VL3 nâng cao</a>
+    <a class="card" href="/vl2/co-ban">VL2 cơ bản</a>
+    <a class="card" href="/vl2/co-ban">VL2 nâng cao</a>
+    <a class="card" href="/vl2/co-ban">VL3 cơ bản</a>
+    <a class="card" href="/vl2/co-ban">VL3 nâng cao</a>
 </div>
 
 
